--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,12 @@ spring.mustache.check-template-location = false
 vaadin.launch-browser=true
 
 # MariaDB configuration.
-#spring.datasource.url = jdbc\:mariadb\://localhost\:3306/mantenedores
-#spring.datasource.username = vaadinstart
-#spring.datasource.password = vaadinstart
-#spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
-#spring.jpa.hibernate.ddl-auto = update
+spring.datasource.url = jdbc\:mariadb\://localhost\:3306/mantenedores
+spring.datasource.username = vaadinstart
+spring.datasource.password = vaadinstart
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+spring.jpa.hibernate.ddl-auto = update
+
 
 
 # To improve the performance during development.
