--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,5 +33,5 @@ odoo.username=bubilla@equipos.com.uy
 odoo.password=bubilla@equipos.com.uy
 
 # Alchemer API credentials
-alchemer.api.token=YOUR_ALCHEMER_API_TOKEN
-alchemer.api.token.secret=YOUR_ALCHEMER_API_TOKEN_SECRET
+alchemer.api.token=73305b19aec9ea61725b082179b9556ae32f494efc37e5b113
+alchemer.api.token.secret=A9lwGSTYjI0bQ
