--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,13 @@ spring.mustache.check-template-location = false
 
 # Launch the default browser when starting the application in development mode
 vaadin.launch-browser=true
+vaadin.productionMode=false
+
 
 # MariaDB configuration.
 spring.datasource.url = jdbc\:mariadb\://localhost\:3306/mantenedores
-spring.datasource.username = vaadinstart
-spring.datasource.password = vaadinstart
+spring.datasource.username = userpbi
+spring.datasource.password = us3rpb1
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 spring.jpa.hibernate.ddl-auto = update
 
