--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.servlet.context-path=/utiles
 
 # Launch the default browser when starting the application in development mode
 vaadin.launch-browser=true
-vaadin.productionMode=false
+vaadin.productionMode=true
 
 
 
