--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,5 +41,5 @@ alchemer.api.token=73305b19aec9ea61725b082179b9556ae32f494efc37e5b113
 alchemer.api.token.secret=A9lwGSTYjI0bQ
 
 # SurveyToGo API credentials
-surveyToGo.username=your_username
-surveyToGo.password=your_password
+surveyToGo.username=e409fd48-2303-4e0e-b181-1f64f135713a/EquiposConsultores
+surveyToGo.password=b4ys4
