--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,3 +43,8 @@ alchemer.api.token.secret=A9lwGSTYjI0bQ
 # SurveyToGo API credentials
 surveyToGo.username=e409fd48-2303-4e0e-b181-1f64f135713a/EquiposConsultores
 surveyToGo.password=b4ys4
+
+
+# Set maximum file upload size
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
