--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,10 @@
       <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.fasterxml.jackson.dataformat</groupId>
+      <artifactId>jackson-dataformat-xml</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.apache.xmlrpc</groupId>
       <artifactId>xmlrpc-client</artifactId>
       <version>3.1.3</version>
@@ -112,6 +116,10 @@
         <exclusion>
           <groupId>org.apache.ws.commons.util</groupId>
           <artifactId>ws-commons-util</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>commons-httpclient</groupId>
+          <artifactId>commons-httpclient</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
@@ -127,6 +135,10 @@
         <exclusion>
           <groupId>org.apache.ws.commons.util</groupId>
           <artifactId>ws-commons-util</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>commons-httpclient</groupId>
+          <artifactId>commons-httpclient</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
@@ -185,9 +197,6 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
-        <configuration>
-          <jvmArguments>--patch-module java.xml=${xmlrpc.jars.path}</jvmArguments>
-        </configuration>
         <executions>
           <execution>
             <id>repackage</id>
@@ -235,18 +244,6 @@
               <includeScope>runtime</includeScope>
             </configuration>
           </execution>
-          <execution>
-            <id>build-classpath-for-patch-module</id>
-            <phase>initialize</phase>
-            <goals>
-              <goal>build-classpath</goal>
-            </goals>
-            <configuration>
-              <includeArtifactIds>xmlrpc-client,xmlrpc-common</includeArtifactIds>
-              <outputProperty>xmlrpc.jars.path</outputProperty>
-              <pathSeparator>:</pathSeparator>
-            </configuration>
-          </execution>
         </executions>
       </plugin>
 
@@ -255,21 +252,12 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.13.0</version>
-        <configuration>
-          <compilerArgs>
-            <arg>--patch-module</arg>
-            <arg>java.xml=${xmlrpc.jars.path}</arg>
-          </compilerArgs>
-        </configuration>
       </plugin>
 
       <!-- Surefire plugin para tests -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <argLine>--patch-module java.xml=${xmlrpc.jars.path}</argLine>
-        </configuration>
       </plugin>
 
     </plugins>
