--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,10 @@ logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
 server.servlet.context-path=/utiles
 
+server.forward-headers-strategy=native 
+server.tomcat.use-relative-redirects=false
+
+
 # Launch the default browser when starting the application in development mode
 vaadin.launch-browser=true
 vaadin.productionMode=false
