--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "proj4": "2.15.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-router": "7.5.2"
+    "react-router": "7.5.2",
+    "tltv-gantt-element": "1.0.28",
+    "tltv-timeline-element": "1.0.20"
   },
   "devDependencies": {
     "@babel/preset-react": "7.26.3",
@@ -62,7 +64,9 @@
       "proj4": "2.15.0",
       "react": "18.3.1",
       "react-dom": "18.3.1",
-      "react-router": "7.5.2"
+      "react-router": "7.5.2",
+      "tltv-gantt-element": "1.0.28",
+      "tltv-timeline-element": "1.0.20"
     },
     "devDependencies": {
       "@babel/preset-react": "7.26.3",
@@ -85,7 +89,7 @@
       "workbox-core": "7.3.0",
       "workbox-precaching": "7.3.0"
     },
-    "hash": "7f914a051bd06ce7204a4b9eb96c909848c22b7f9d1b910c35621838061d853d"
+    "hash": "be76296215721b09fc016012258cb406bc6f2e3f87f17fc4b35e651083a3790f"
   },
   "overrides": {
     "@vaadin/bundles": "$@vaadin/bundles",
@@ -105,6 +109,8 @@
     "proj4": "$proj4",
     "@vaadin/vaadin-themable-mixin": "$@vaadin/vaadin-themable-mixin",
     "@vaadin/vaadin-lumo-styles": "$@vaadin/vaadin-lumo-styles",
-    "@vaadin/vaadin-material-styles": "$@vaadin/vaadin-material-styles"
+    "@vaadin/vaadin-material-styles": "$@vaadin/vaadin-material-styles",
+    "tltv-timeline-element": "$tltv-timeline-element",
+    "tltv-gantt-element": "$tltv-gantt-element"
   }
 }
