--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ server.tomcat.use-relative-redirects=false
 
 # Launch the default browser when starting the application in development mode
 vaadin.launch-browser=true
-vaadin.productionMode=true
+vaadin.productionMode=false
 
 
 
