--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.jpa.hibernate.ddl-auto = update
 # To improve the performance during development.
 # For more information https://vaadin.com/docs/latest/integrations/spring/configuration#special-configuration-parameters
 vaadin.allowed-packages = com.vaadin,org.vaadin,com.flowingcode,uy.com.equipos.utiles
-spring.jpa.defer-datasource-initialization = true
+spring.jpa.defer-datasource-initialization = false
 spring.sql.init.mode = always  
 
 # ODOO Configuration for Hourly Project Sync
