--- a/pom.xml
+++ b/pom.xml
@@ -32,14 +32,6 @@
       <id>vaadin-addons</id>
       <url>https://maven.vaadin.com/vaadin-addons</url>
     </repository>
-	<repository>
-		<id>spring-milestones</id>
-		<name>Spring Milestones</name>
-		<url>https://repo.spring.io/milestone</url>
-		<snapshots>
-			<enabled>false</enabled>
-		</snapshots>
-	</repository>
   </repositories>
 
   <dependencyManagement>
@@ -51,21 +43,25 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
+      
       <dependency>
-        <groupId>org.springframework.ai</groupId>
-        <artifactId>spring-ai-bom</artifactId>
-        <version>1.0.3</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
+      <groupId>org.springframework.ai</groupId>
+      <artifactId>spring-ai-bom</artifactId>
+      <version>1.0.1</version><!-- use the latest stable -->
+      <type>pom</type>
+      <scope>import</scope>
+    </dependency>
+      
     </dependencies>
   </dependencyManagement>
 
   <dependencies>
-	<dependency>
-		<groupId>org.springframework.ai</groupId>
-		<artifactId>spring-ai-openai-spring-boot-starter</artifactId>
-	</dependency>
+  
+    <!-- OpenAI LLM via Spring AI -->
+    <dependency>
+        <groupId>org.springframework.ai</groupId>
+        <artifactId>spring-ai-starter-model-openai</artifactId>
+    </dependency>
   <!-- Gantt -->
   <dependency>
    <groupId>org.vaadin.addons.tltv.gantt</groupId>
