--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,7 +56,7 @@ spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 
 # OpenAI configuration
-spring.ai.openai.api-key=xx
+spring.ai.openai.api-kessy=xx
 spring.ai.openai.chat.options.model=gpt-4o
 spring.ai.openai.chat.options.temperature=0.2
 app.openai.prompt=Eres un codificador de encuestas en una empresa de investigacion de mercado. Tu tarea es leer cada respuesta dada en la primera lista, y codificarla segun la lista de codigos pasada por parametros.
