--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,5 +56,8 @@ spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 
 # OpenAI configuration
+ 
 spring.ai.openai.chat.options.model=gpt-4o
 spring.ai.openai.chat.options.temperature=0.2 
+spring.ai.openai.chat.options.maxTokens=16384 
+#spring.ai.openai.chat.options.maxCompletionTokens=9000
