--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,15 @@
 
   <dependencies>
   
+  <dependency>
+  <groupId>org.apache.httpcomponents.client5</groupId>
+  <artifactId>httpclient5</artifactId>
+</dependency>
+<dependency>
+  <groupId>org.apache.httpcomponents.core5</groupId>
+  <artifactId>httpcore5</artifactId>
+</dependency>
+  
     <!-- OpenAI LLM via Spring AI -->
     <dependency>
         <groupId>org.springframework.ai</groupId>
