--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ server.tomcat.use-relative-redirects=false
 
 # Launch the default browser when starting the application in development mode
 vaadin.launch-browser=true
-vaadin.productionMode=true
+vaadin.productionMode=false
 
 
 
@@ -59,4 +59,5 @@ spring.servlet.multipart.max-request-size=50MB
 spring.ai.openai.chat.options.model=gpt-4o
 spring.ai.openai.chat.options.temperature=0.2 
 spring.ai.openai.chat.options.maxTokens=16384 
-#spring.ai.openai.chat.options.maxCompletionTokens=9000  
+#spring.ai.openai.chat.options.maxCompletionTokens=9000
+ 
