--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -59,8 +59,8 @@ spring.servlet.multipart.max-request-size=50MB
 spring.ai.openai.chat.options.model=gpt-4o
 spring.ai.openai.chat.options.temperature=0.2 
 spring.ai.openai.chat.options.maxTokens=16384 
-#spring.ai.openai.chat.options.maxCompletionTokens=9000
+spring.ai.retry.max-attempts=3
+spring.ai.retry.backoff.initial-interval=2s
+spring.ai.retry.backoff.multiplier=2
 
-# WhatsApp Configuration
-whatsapp.phone.number.id=PLACEHOLDER
-whatsapp.api.token=PLACEHOLDER
+
