--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ server.tomcat.use-relative-redirects=false
 
 # Launch the default browser when starting the application in development mode
 vaadin.launch-browser=true
-vaadin.productionMode=false
+vaadin.productionMode=true
 
 
 
@@ -62,5 +62,4 @@ spring.ai.openai.chat.options.maxTokens=16384
 spring.ai.retry.max-attempts=3
 spring.ai.retry.backoff.initial-interval=2s
 spring.ai.retry.backoff.multiplier=2
-
-
+#spring.ai.openai.chat.options.maxCompletionTokens=9000
