--- a/pom.xml
+++ b/pom.xml
@@ -212,6 +212,11 @@
         <artifactId>poi-ooxml</artifactId>
         <version>5.2.3</version>
     </dependency>
+    <dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi-scratchpad</artifactId>
+    <version>5.2.3</version> <!-- Usá la misma versión que tu poi-ooxml -->
+    </dependency>
 
     <!-- jaudiotagger for audio duration -->
     <dependency>
